# multimodal-ml

./: .dockerignore  .gitattributes  .gitignore  .main.py.swp  .python_history  555team1  Dockerfile  README.md  config.py  get_cloud.py  incorrect_users_images.py  key.txt  main.py  masumi_attempt.py  nb.py  postprocessing.py  pre_processing.py  preprocessing.py  pyproject.toml  requirements.txt  split.py  tcss555  tcss555old  text.txt  todo.md  training.py  user_traits_prediction_models.pkl  vgg16_weights.pth
.github/workflows/: docker-image.yml  docker-publish.yml
.java/fonts/21.0.4/: fcinfo-1-555team1-Ubuntu-22.04-en-US.properties
image/: image_config.py  image_model.py  image_preprocessing.py  image_testrun.py  image_utils.py  model.py
like/: bayes.py  evaluation.py  gender_prediction_model.pkl  predict.py  preprocessdata.py  train.py
ml/: main.py  nb.py  new.py  tcss555
public-test-data/LIWC/: LIWC.csv
setup/: get_cloud.py  requirements.txt
src/multimodal_ml/: __init__.py
text/: YouTubeNB.py  analyze.py  bert.py  clean.py  clean_data.py  emojis.py  filter_text.py  main.py  masumi-rnn.py  model.pkl  personality_prediction.py  preprocessing.py  rhyme.text  scratch  test.py  text_main.py  train.py
