[project]
name = "multimodal-ml"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "pillow>=11.0.0",
    "torchvision>=0.20.1",
    "pandas>=2.2.3",
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "gdown>=5.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multimodal_ml"]
